project/deploy/kubernetes/overlays/stg/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
