project/deploy/kubernetes/overlays/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
  labels:
    name: project
  annotations:
    kubernetes.io/ingress.class: traefik # Explicitly specify Traefik as the ingress controller
spec:
  rules:
    - host: stg.localhost #
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 30081
          - path: /api/image
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 30081
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 30081
